/**
 * Calcul pur des « runs » de clause (P2). Un run est l'étendue de phrases couverte
 * par une clause : du min de son ancre jusqu'à juste avant l'ancre suivante. Le
 * préfixe sans ancre (avant la 1re ancre) forme un run « neutre » sans thème.
 *
 * Utilisé pour : le rail coloré gauche + pointillés de frontière (DocumentPanel),
 * et le calcul d'accord LLM (thème proposé par chaque juge pour une phrase donnée).
 *
 * Fonctions PURES, sans dépendance React → testables isolément (tests/runs.test.ts).
 */

export interface RunAnchor {
  anchorIndex: number;
  theme: string;
  localId: string;
}

export interface Run {
  start: number;
  end: number;
  theme: string | null;
  localId: string | null;
}

/**
 * Découpe [0, nSentences) en runs contigus, triés par anchorIndex.
 *
 * Deux modes :
 *  - **span / forward-fill** (défaut) : chaque clause couvre de son ancre jusqu'à
 *    (ancre suivante − 1), bornée à nSentences−1. Utilisé pour les SEGMENTS LLM
 *    (data `start_id` + thème) qui sont par nature des spans.
 *  - **perSentence** (C4) : chaque clause couvre EXACTEMENT sa phrase `[ancre, ancre]` ;
 *    tout le reste (avant/entre/après) forme des runs neutres `{theme:null}`. Utilisé
 *    pour l'annotation HUMAINE — annoter une phrase n'affecte qu'elle (pas de
 *    débordement vers les phrases suivantes).
 *
 * Défensif : ancres hors bornes ignorées, doublons d'ancre fusionnés (1re gagne).
 */
export function computeRuns(
  drafts: RunAnchor[],
  nSentences: number,
  opts?: { perSentence?: boolean },
): Run[] {
  if (nSentences <= 0) return [];

  // Trie + déduplique par anchorIndex en gardant des ancres valides dans [0, n).
  const seen = new Set<number>();
  const anchors = drafts
    .filter((d) => Number.isInteger(d.anchorIndex) && d.anchorIndex >= 0 && d.anchorIndex < nSentences)
    .slice()
    .sort((a, b) => a.anchorIndex - b.anchorIndex)
    .filter((d) => {
      if (seen.has(d.anchorIndex)) return false;
      seen.add(d.anchorIndex);
      return true;
    });

  const runs: Run[] = [];

  if (opts?.perSentence) {
    // Chaque clause = sa propre phrase ; les intervalles libres = runs neutres.
    let cursor = 0;
    for (const a of anchors) {
      if (a.anchorIndex > cursor) {
        runs.push({ start: cursor, end: a.anchorIndex - 1, theme: null, localId: null });
      }
      runs.push({ start: a.anchorIndex, end: a.anchorIndex, theme: a.theme, localId: a.localId });
      cursor = a.anchorIndex + 1;
    }
    if (cursor < nSentences) {
      runs.push({ start: cursor, end: nSentences - 1, theme: null, localId: null });
    }
    return runs;
  }

  // Préfixe neutre si la 1re ancre n'est pas en 0.
  const firstAnchor = anchors[0]?.anchorIndex ?? nSentences;
  if (firstAnchor > 0) {
    runs.push({ start: 0, end: firstAnchor - 1, theme: null, localId: null });
  }

  for (let i = 0; i < anchors.length; i += 1) {
    const a = anchors[i]!;
    const nextStart = anchors[i + 1]?.anchorIndex ?? nSentences;
    runs.push({
      start: a.anchorIndex,
      end: nextStart - 1,
      theme: a.theme,
      localId: a.localId,
    });
  }

  return runs;
}

/**
 * Fusionne les runs ADJACENTS de même thème (et même nullité) en un seul. Utile pour
 * l'affichage des frontières d'un juge : plusieurs clauses consécutives de même thème
 * ne forment qu'UNE frontière visible (ex. Mistral découpe finement mais garde le même
 * thème). Conserve le localId/anchorIndex du PREMIER run (l'ancre). Pur → testable.
 */
export function coalesceRuns(runs: Run[]): Run[] {
  const out: Run[] = [];
  for (const r of runs) {
    const last = out[out.length - 1];
    if (last && last.theme === r.theme && last.end === r.start - 1) {
      last.end = r.end; // étend le segment précédent (même thème, contigu)
    } else {
      out.push({ ...r });
    }
  }
  return out;
}

/** Run couvrant l'index donné (ou undefined si hors de tout run). */
export function runAt(runs: Run[], index: number): Run | undefined {
  return runs.find((r) => index >= r.start && index <= r.end);
}

/** Provenance (fermeté) d'une clause pour le rail. */
export interface ClauseProvenance {
  validated?: boolean;
  seededFrom?: string | null;
  resolvedFrom?: string | null;
}

/**
 * Provenance d'un BLOC de thème (run coalescé), pour distinguer au rail ce qui est FERME
 * (validé par un humain / arbitrage adopté) de ce qui est SUGGÉRÉ (pré-annotation non
 * confirmée). Règle CONSERVATRICE : « suggested » dès qu'UNE phrase du bloc est seedée et
 * non validée (et non arbitrée) — on ne sur-affirme jamais « validé ». Pur → testable.
 */
export function runProvenance(
  run: Run,
  anchorByIndex: Map<number, ClauseProvenance>,
): "firm" | "suggested" {
  for (let i = run.start; i <= run.end; i += 1) {
    const a = anchorByIndex.get(i);
    if (a && a.seededFrom && !a.validated && !a.resolvedFrom) return "suggested";
  }
  return "firm";
}

/**
 * Plage ORDONNÉE de localId de clauses (P8) dont le run chevauche [fromIndex, toIndex].
 * Sert au mapping « plage de phrases → clauses » de la sélection multi-blocs au
 * bouton droit. Les runs neutres (localId === null) sont ignorés. L'ordre de sortie
 * suit l'ordre des runs (donc l'ordre des ancres).
 */
export function clauseRangeBetween(
  runs: Run[],
  fromIndex: number,
  toIndex: number,
): string[] {
  const lo = Math.min(fromIndex, toIndex);
  const hi = Math.max(fromIndex, toIndex);
  const ids: string[] = [];
  const seen = new Set<string>();
  for (const r of runs) {
    if (r.localId == null) continue;
    if (r.end >= lo && r.start <= hi && !seen.has(r.localId)) {
      seen.add(r.localId);
      ids.push(r.localId);
    }
  }
  return ids;
}

/** Thème du run couvrant `index` (null si run neutre / hors bornes). */
export function runThemeAt(runs: Run[], index: number): string | null {
  return runAt(runs, index)?.theme ?? null;
}

/**
 * Prochaine frontière strictement après `from` parmi un ensemble de débuts de segment
 * (D3, « sélectionner jusqu'à la frontière suivante, tous modèles confondus »). Renvoie
 * `n` (fin du document) si aucune frontière au-delà. Pur → testable.
 */
export function nextBoundaryFrom(starts: number[], from: number, n: number): number {
  let best = n;
  for (const s of starts) {
    if (s > from && s < best) best = s;
  }
  return best;
}

/** Segment de réglette (Feature A) : une portion de document d'un modèle, un thème. */
export interface GutterSegment {
  /** Phrase de début (porte le marqueur de frontière). */
  startSentence: number;
  /** Dernière phrase couverte (inclus). */
  endSentence: number;
  themeCode: string;
}

/**
 * Projette des runs (forward-fill, spans LLM) en segments de réglette (Feature A).
 * Exclut les runs neutres ; segments triés/contigus/non chevauchants par construction
 * (sortie de `computeRuns`). Pur → testable.
 */
export function segmentsFromRuns(runs: Run[]): GutterSegment[] {
  return runs
    .filter((r) => r.theme != null && r.localId != null)
    .map((r) => ({ startSentence: r.start, endSentence: r.end, themeCode: r.theme as string }));
}

/**
 * Zones de CONFLIT entre modèles (D6) : intervalles de phrases où au moins deux modèles
 * (parmi ceux passés) couvrent la phrase avec des thèmes DIFFÉRENTS. Sert à signaler et
 * rendre clickable la zone (→ 1re phrase du conflit). Pur → testable.
 */
export function conflictZones(
  models: Array<{ segments: GutterSegment[] }>,
  n: number,
): Array<{ start: number; end: number }> {
  const themeAt = (segs: GutterSegment[], i: number): string | null => {
    const s = segs.find((x) => i >= x.startSentence && i <= x.endSentence);
    return s ? s.themeCode : null;
  };
  const zones: Array<{ start: number; end: number }> = [];
  let cur: { start: number; end: number } | null = null;
  for (let i = 0; i < n; i += 1) {
    const themes = models.map((m) => themeAt(m.segments, i)).filter((t): t is string => t != null);
    const conflict = new Set(themes).size >= 2; // ≥ 2 thèmes distincts présents
    if (conflict) {
      if (cur) cur.end = i;
      else {
        cur = { start: i, end: i };
        zones.push(cur);
      }
    } else {
      cur = null;
    }
  }
  return zones;
}

/**
 * Thème proposé par un juge LLM pour la phrase `index`, déduit des clauses fantômes.
 * On reconstruit les runs des fantômes du juge puis on lit le thème couvrant l'index.
 */
export function judgeThemeAt(
  ghosts: Array<{ anchorIndex: number; theme: string; judge: string }>,
  judge: string,
  index: number,
  nSentences: number,
): string | null {
  const forJudge = ghosts
    .filter((g) => g.judge === judge)
    .map((g, i) => ({ anchorIndex: g.anchorIndex, theme: g.theme, localId: `${judge}-${i}` }));
  if (forJudge.length === 0) return null;
  const runs = computeRuns(forJudge, nSentences);
  return runThemeAt(runs, index);
}
